feat: adds deploy workfolow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,20 +1,19 @@
 on:
+on:
   push:
     branches:
       - main
-  pull_request:
-    branches: '*'
 
-name: Project check
+name: Deploy
 jobs:
   check:
-    name: Check
+    name: deploy
     runs-on: ubuntu-latest
     steps:
     - name: Set up Node.js
       uses: actions/setup-node@v1
       with:
-        node-version: '12'
+        node-version: '16'
 
     - uses: actions/checkout@main
       name: Checkout
@@ -23,4 +22,4 @@ jobs:
       run: npm install
 
     - name: Run checks
-      run: npm test && npm run lint
+      run: npm run deploy
